# Medical_QA1

./: .gitignore  DEPLOYMENT.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1760659712886-f9a69a305435d8.mjs  vite.config.ts.timestamp-1761005410119-4037f078ea83c8.mjs
.github/workflows/: build.yml
scripts/: load-demo-data.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  database.rs  encryption.rs  main.rs  ocr.rs  parser.rs  rules.rs  types.rs
src/components/: DashboardLayout.tsx  DemoTour.tsx
src/pages/: AnalyticsPage.tsx  ClaimReviewPage.tsx  LoginPage.tsx  QueuesPage.tsx  SettingsPage.tsx  UploadPage.tsx  UsersPage.tsx
src/pages/__tests__/: LoginPage.test.tsx
src/stores/: authStore.ts  claimsStore.ts  demoStore.ts
src/utils/: demoData.ts  sampleData.ts
supabase/migrations/: 20251021001642_create_users_profile_table.sql  20251025011206_create_claims_table.sql
tests/e2e/: app.spec.ts
